--- a/hookObjc_Msgsend/Package/DEBIAN/control
+++ b/hookObjc_Msgsend/Package/DEBIAN/control
@@ -1,4 +1,4 @@
-Package: com.ishumei.hookObjc-Msgsend
+Package: com.wangyankun.hookObjc-Msgsend
 Name: hookObjc_Msgsend
 Version: 2.0
 Description: hookobjc
